client: fix "ceph.snap.btime" vxattr value

The vxattr value incorrectly places a "09" prefix to the nanoseconds
field, instead of providing it as a zero-pad width specifier after '%'.

Fixes: https://tracker.ceph.com/issues/39705
Signed-off-by: David Disseldorp <ddiss@suse.de>
(cherry picked from commit 02935988ec61f67fb8203982fa259402c6e545af)