src/client/Client.cc
@@ -11804,7 +11804,7 @@ bool Client::_vxattrcb_snap_btime_exists(Inode *in)
 
 size_t Client::_vxattrcb_snap_btime(Inode *in, char *val, size_t size)
 {
-  return snprintf(val, size, "%llu.09%lu",
+  return snprintf(val, size, "%llu.%09lu",
       (long long unsigned)in->snap_btime.sec(),
       (long unsigned)in->snap_btime.nsec());
 }
